ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-new
spec:
  rules:
  - host: www.test.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
